Issue #15 - Group Pages
Added Leaders to Group Pages and fixed publications not showing up on individual pages.
Also set the Person cards' height on the people page a bit larger in case a card has a two-row title (which would move the cards in the row beneath)

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -738,6 +738,7 @@ hr {
     float: left;
     margin: 16px;
     background-color: #FAFAFA;
+    min-height: 445px;
 
     button {
         border: none;
